--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.9.9",
     "validator": "^13.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "bcryptjs": "^2.4.3"
   }
 }
