--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.9.9",
     "validator": "^13.0.0",
     "express": "^4.17.1",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "8.5.1"
   }
 }
