--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "validator": "^13.0.0",
     "express": "^4.17.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "8.5.1"
+    "jsonwebtoken": "8.5.1",
+    "multer": "^1.4.2",
+    "sharp": "^0.25.2"
   }
 }
