--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,11 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "8.5.1",
     "multer": "^1.4.2",
-    "sharp": "^0.25.2"
+    "sharp": "^0.25.2",
+    "@sendgrid/mail": "^7.1.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.3"
   }
 }
